--- a/src/components/TopBanner/topbanner.scss
+++ b/src/components/TopBanner/topbanner.scss
@@ -55,6 +55,9 @@
       width: 250px;
     }
   }
+  .top-banner-svg {
+    margin-bottom: -3px;
+  }
   .top-banner-content-parent {
     text-align: center;
     padding: 100px;
