--- a/src/components/TryForm/tryform.scss
+++ b/src/components/TryForm/tryform.scss
@@ -32,7 +32,8 @@
         min-width: 250px;
         background: $white !important;
         border: none;
-        box-shadow: 0px 2px 4px rgba(181, 181, 181, 0.5);
+        -webkit-appearance: none;
+        box-shadow: 0px 2px 4px rgba(181, 181, 181, 0.5) !important;
         border-radius: 18.5px;
         margin: 15px;
         outline: none;
